# language

./: Cargo.toml  LICENSE  README.md  TODO  grammar  lang_ideas.rs  language  rustfmt.toml
crates/language_ast/: Cargo.toml
crates/language_ast/src/: ast.rs  display.rs  lib.rs
crates/language_bin/: Cargo.toml
crates/language_bin/src/: main.rs
crates/language_codegen/: Cargo.toml
crates/language_codegen/src/: assembler.rs  compiler.rs  env.rs  lib.rs  utils.rs  visitor.rs
crates/language_engine/: Cargo.toml
crates/language_engine/src/: lib.rs
crates/language_engine/src/utils/: stack.rs
crates/language_engine/src/vm/: callstack.rs  instructions.rs  mod.rs  program.rs  stack.rs
crates/language_engine/src/vm/opcodes/: mod.rs
crates/language_parser/: Cargo.toml
crates/language_parser/src/error/: mod.rs
crates/language_parser/src/lexer/: mod.rs
crates/language_parser/src/parser/: expressions.rs  item.rs  mod.rs  statements.rs
grammar/: lang_ideas.rs  tmp  tmp2  tmp2_syntax
src/: bench.rs  main.rs
src/codegen/: _mod.rs  compiler.rs  mod.rs  utils.rs
src/execute/: literals.rs  mod.rs
src/execute/bytecode/: mod.rs
src/execute/register_bytecode/: assembler.rs  callstack.rs  mod.rs  program.rs  stack.rs  vm.rs
src/execute/stack_bytecode/: assembler.rs  compiler.rs  mod.rs  vm.rs
src/execute/walker/: mod.rs
src/lexer/: mod.rs
src/parser/: ast.rs  expressions.rs  item.rs  mod.rs  statements.rs
src/utils/: stack.rs
src/vm/: assembler.rs  instructions.rs  mod.rs  program.rs  stack.rs
src/walker/: mod.rs
