[package]
name = "language"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.13.0"
rustc-hash = "1.1.0"
# f128 = "0.2.9"


[dev-dependencies]
rand = "0.8.5"
pretty_assertions = "1.3.0"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"